[gd_scene load_steps=8 format=2]

[ext_resource path="res://SongOption.tscn" type="PackedScene" id=1]
[ext_resource path="res://GameTheme.tres" type="Theme" id=2]
[ext_resource path="res://Logo.tscn" type="PackedScene" id=3]
[ext_resource path="res://Bg.tscn" type="PackedScene" id=4]
[ext_resource path="res://SongsMenu.gd" type="Script" id=5]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.995556 )
colors = PoolColorArray( 0.015625, 0.015625, 0.015625, 1, 0.177979, 0.40694, 0.949219, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )
width = 10

[node name="SongsMenu" type="Control"]
theme = ExtResource( 2 )
script = ExtResource( 5 )

[node name="Bg" type="Sprite" parent="."]
position = Vector2( 299, 571 )
rotation = -1.5708
scale = Vector2( 120, 800 )
texture = SubResource( 2 )

[node name="Bg2" parent="." instance=ExtResource( 4 )]
visible = false

[node name="Logo" parent="." instance=ExtResource( 3 )]

[node name="ListC" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 200.0
margin_right = 600.0
margin_bottom = 950.0
rect_min_size = Vector2( 600, 750 )
scroll_horizontal_enabled = false

[node name="VBoxC" type="VBoxContainer" parent="ListC"]
margin_right = 580.0
margin_bottom = 204.0

[node name="SongOption" parent="ListC/VBoxC" instance=ExtResource( 1 )]
margin_right = 580.0

[node name="SongOption2" parent="ListC/VBoxC" instance=ExtResource( 1 )]
margin_top = 104.0
margin_right = 580.0
margin_bottom = 204.0

[node name="SongOption3" parent="ListC/VBoxC" instance=ExtResource( 1 )]
visible = false
margin_top = 104.0
margin_right = 580.0
margin_bottom = 204.0

[node name="SongOption4" parent="ListC/VBoxC" instance=ExtResource( 1 )]
visible = false
margin_top = 104.0
margin_right = 580.0
margin_bottom = 204.0

[node name="SongOption5" parent="ListC/VBoxC" instance=ExtResource( 1 )]
visible = false
margin_top = 104.0
margin_right = 580.0
margin_bottom = 204.0

[node name="SongOption6" parent="ListC/VBoxC" instance=ExtResource( 1 )]
visible = false
margin_top = 104.0
margin_right = 580.0
margin_bottom = 204.0

[node name="SongOption7" parent="ListC/VBoxC" instance=ExtResource( 1 )]
visible = false
margin_top = 104.0
margin_right = 580.0
margin_bottom = 204.0

[node name="SongOption8" parent="ListC/VBoxC" instance=ExtResource( 1 )]
visible = false
margin_top = 104.0
margin_right = 580.0
margin_bottom = 204.0

[node name="SongOption9" parent="ListC/VBoxC" instance=ExtResource( 1 )]
visible = false
margin_top = 104.0
margin_right = 580.0
margin_bottom = 204.0

[node name="SongOption10" parent="ListC/VBoxC" instance=ExtResource( 1 )]
visible = false
margin_top = 104.0
margin_right = 580.0
margin_bottom = 204.0

[node name="SongOption11" parent="ListC/VBoxC" instance=ExtResource( 1 )]
visible = false
margin_top = 104.0
margin_right = 580.0
margin_bottom = 204.0

[node name="SongOption12" parent="ListC/VBoxC" instance=ExtResource( 1 )]
visible = false
margin_top = 104.0
margin_right = 580.0
margin_bottom = 204.0

[node name="DetailsC" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 200.0
margin_right = 600.0
margin_bottom = 950.0
rect_min_size = Vector2( 600, 750 )
scroll_horizontal_enabled = false

[node name="VBoxC" type="VBoxContainer" parent="DetailsC"]

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 152.0
margin_top = 969.0
margin_right = 452.0
margin_bottom = 1000.0
rect_min_size = Vector2( 300, 0 )
clip_text = true

[node name="Label" type="Label" parent="Button"]
margin_right = 300.0
margin_bottom = 25.0
text = "Back"
align = 1
valign = 1
